--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "setup-operator-sdk",
-  "version": "1.1.1",
+  "name": "setup-k8s-operator-sdk",
+  "version": "1.1.2",
   "private": true,
   "description": "Setup Operator SDK Action",
   "main": "lib/main.js",
